--- a/iframe/iframe.html
+++ b/iframe/iframe.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <table width="50%" height="80px">
+    <table width="100%" height="600px">
     <tr>
         <td width="20%">
             <ul>
-                <li><a href="../iframe/iframe.html" target="myframe">iframe</a></li>
+              
                 <li><a href="../images/ajio logo.jpg" target="myframe">images</a></li>
                 <li><a href="../index/index.html" target="myframe">index</a></li>
                 <li><a href="../list/list.html" target="myframe">list</a></li>
@@ -22,7 +22,7 @@
 
         </td>
         <td>
-        
+        <iframe src="" height="600px" width="100%" name="myframe" frameborder="2" allow="accelerometer"></iframe>
         </td>
     </tr>
     </table>
